# The-Moor-of-Venice

./: CMakeLists.txt  Makefile  MyGame  README.md  flake.nix  meson.build  run_my_game.sh  sfml_app
include/: AI.h  Board.h  Game.h  ParticleSystem.h
lib/: libsfml-network.so.2.5.1
report/: report.aux  report.fdb_latexmk  report.fls  report.out  report.tex  report.toc
src/: AI.cpp  Board.cpp  Game.cpp  ParticleSystem.cpp  main.cpp
